apps/forgejo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo-ingress
  namespace: forgejo
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - forgejo
  rules:
    - host: forgejo
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forgejo-http
                port:
                  number: 3000
